# skill-generator

./: .env.example  .gitignore  DESIGN.md  README.md  SKILL-SPEC.md  pyproject.toml
chinese-romance-novel-engine/: SKILL.md  config.yaml
chinese-romance-novel-engine/references/: character-motivation-arc.md  chinese-romance-tropes.md  plot-pacing-conflict.md  prose-style-chinese.md  romance-tension-flow.md
novel-critique-skill/: SKILL.md  config.yaml
novel-critique-skill/references/: character-craft.md  pacing-tension.md  plot-structure.md  prose-style.md  theme-originality.md
skill_generator/: __init__.py  __main__.py
skill_generator/generator/: __init__.py  cli.py  generator.py  templates.py  validator.py
skill_generator/llm/: __init__.py  adapter.py  parser.py  prompts.py
